--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Microsoft-login</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <section>
         <div class="container">
-            <img src="../IMGmicrosoft/microsoft_logo_564db913a7fa0ca42727161c6d031bef.svg" alt="">
+            <img src="IMGmicrosoft/microsoft_logo_564db913a7fa0ca42727161c6d031bef.svg" alt="">
 
 
             <label for="email">Entrar</label>
@@ -28,11 +28,12 @@
         </div>
         <br>
         <div class="containerOp">
-            <label for="op"><img src="../IMGmicrosoft/signin-options_3e3f6b73c3f310c31d2c4d131a8ab8c6.svg"
+            <label for="op"><img src="IMGmicrosoft/signin-options_3e3f6b73c3f310c31d2c4d131a8ab8c6.svg"
                     alt=""></label>
             <p id="op">Opções de entrada</p>
         </div>
     </section>
 </body>
+
 
 </html>
